# cc-anywhere

./: .gitignore  CHANGELOG.md  COMMAND-INDEX.md  CONTRIBUTING.md  LICENSE  LLM-CHEATSHEET.md  OVERVIEW.md  README.md  pyproject.toml
src/cc_anywhere/: __init__.py  _paths.py  backup.py  cli.py  core.py  digest.py  evaluate.py  help.py  init_setup.py  llm_guide.py  mcp_server.py  persona.py  review.py  semantic.py  sqlite_capture.py  stats.py  sync.py
tests/: __init__.py  test_codex_capture.py  test_digest.py  test_gemini_capture.py  test_init_setup.py  test_paths_migration.py  test_semantic.py  test_sqlite_capture.py  test_sync_archive.py
